# corporate-research

./: AGENTS.md  DESIGN.md  README.md  docker-compose.yml
client/: biome.json  middleware.ts  orval.config.ts  package.json
docs/: INDEX.md  api-design.md  database-design.md  (+8 more)
server/: Makefile  alembic.ini  main.py  openapi.json  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 02f6f6aa81dc_initial_schema.py  48d0de8241c6_add_users_table.py  77cd704e00e6_init.py  cf968a334637_add_page_snapshots_deep_research_.py
server/scripts/: export_openapi.py
server/src/analysis/: analysis_service.py  compare_service.py  converters.py  llm.py  prompts.py  router.py  schemas.py  service.py
server/src/auth/: dependencies.py  jwt.py  router.py  schemas.py  service.py
server/src/collector/: parsers.py  service.py
server/src/companies/: __init__.py  router.py  schemas.py  service.py
server/src/crawler/: service.py
server/src/db/: models.py  repository.py
server/src/db/models/: __init__.py  analysis_result.py  analysis_run.py  base.py  company.py  comparison_session.py  deep_research.py  page_snapshot.py  user.py
server/src/db/repository/: __init__.py  analysis_result.py  analysis_run.py  company.py  comparison.py  deep_research.py  page.py
server/src/deep_research/: service.py
server/src/download/: generator.py
server/src/extraction/: __init__.py  service.py
server/src/jobs/: __init__.py  manager.py  router.py
server/src/search/: service.py
server/src/shared/: config.py  db.py  exceptions.py  http_client.py  llm.py  logger.py  text.py
(+72 files in other folders)
