[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-ai-projects>=2.0.1",
    "azure-identity>=1.25.3",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-azure-ai>=1.2.2",
    "langgraph>=1.1.8",
    "lxml>=6.1.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "ruff>=0.15.11",
]
